--- a/ZooUni/ZooUni/Views/Shared/_Layout.cshtml
+++ b/ZooUni/ZooUni/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Predator">Information</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
@@ -49,6 +50,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
