Working on Information controller and views, adding more reptiles

--- a/ZooUni/ZooUni/Views/Information/Reptile.cshtml
+++ b/ZooUni/ZooUni/Views/Information/Reptile.cshtml
@@ -17,7 +17,7 @@
     which refers to all animals more closely related to modern reptiles than to mammals.
 </ul>
 <ul>
-    <img src="https://i.dlpng.com/static/png/7293352_preview.png" style="overflow: hidden; position: relative; width:800px; height:500px;" />
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYxIevsQUXyBfiaz7He9YcE662g9-JQlm8nA&usqp=CAU" style="overflow: hidden; position: relative; width:800px; height:500px;" />
 </ul>
 <ul>
     Reptiles are tetrapod vertebrates, creatures that either have four limbs or, like snakes,
