--- a/ZooUni/ZooUni/Views/Shared/_Layout.cshtml
+++ b/ZooUni/ZooUni/Views/Shared/_Layout.cshtml
@@ -17,20 +17,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Add">Add Animal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="All">FirstButton</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Predator">Information</a>
-                        </li>
-                    </ul>
+                    <ul class="navbar-nav flex-grow-1"></ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
