--- a/ZooUni/ZooUni/Views/Information/Mammal.cshtml
+++ b/ZooUni/ZooUni/Views/Information/Mammal.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<AnimalViewModel>
 <h1>
-    Mammal's information
+    <center>Mammal's information</center>
 </h1>
 <ul>
-    <img src="https://pngimg.com/uploads/elephants/elephants_PNG18776.png" style="overflow: hidden; position: relative; width:400px; height:400px;" />
+    <center><img src="https://pngimg.com/uploads/elephants/elephants_PNG18776.png" style="overflow: hidden; position: relative; width:400px; height:400px;" /></center>
 </ul>
 <ul>
     Mammals are a group of vertebrate animals
@@ -17,7 +17,7 @@
     bats and Eulipotyphla (hedgehogs, moles, shrews, and others).
 </ul>
 <ul>
-    <img src="https://cdn.pixabay.com/photo/2017/09/02/22/10/dolphin-2708695_1280.png" style="overflow: hidden; position: relative; width:300px; height:500px;" />
+    <center><img src="https://cdn.pixabay.com/photo/2017/09/02/22/10/dolphin-2708695_1280.png" style="overflow: hidden; position: relative; width:300px; height:500px;" /></center>
 </ul>
 <ul>
     The basic body type is quadruped,
