--- a/ZooUni/ZooUni/Views/Information/Reptile.cshtml
+++ b/ZooUni/ZooUni/Views/Information/Reptile.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<AnimalViewModel>
 <h1>
-    Reptile's information
+    <center>Reptile's information</center>
 </h1>
 <ul>
-    <img src="https://cdn.pixabay.com/photo/2020/11/12/18/28/lizard-5736400_960_720.png" style="overflow: hidden; position: relative; width:700px; height:500px;" />
+    <center><img src="https://cdn.pixabay.com/photo/2020/11/12/18/28/lizard-5736400_960_720.png" style="overflow: hidden; position: relative; width:700px; height:500px;" /></center>
 </ul>
 <ul>
     Reptiles, as most commonly defined, are the animals in the class Reptilia,
@@ -17,7 +17,7 @@
     which refers to all animals more closely related to modern reptiles than to mammals.
 </ul>
 <ul>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYxIevsQUXyBfiaz7He9YcE662g9-JQlm8nA&usqp=CAU" style="overflow: hidden; position: relative; width:800px; height:500px;" />
+    <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYxIevsQUXyBfiaz7He9YcE662g9-JQlm8nA&usqp=CAU" style="overflow: hidden; position: relative; width:800px; height:500px;" /></center>
 </ul>
 <ul>
     Reptiles are tetrapod vertebrates, creatures that either have four limbs or, like snakes,
