--- a/ZooUni/ZooUni/Views/Information/Info.cshtml
+++ b/ZooUni/ZooUni/Views/Information/Info.cshtml
@@ -6,19 +6,19 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="https://nature-mentor.com/wp-content/uploads/2018/10/deer-mammal-e1540301972881.jpg" alt="First slide">
+            <img class="d-block w-100" src="https://nature-mentor.com/wp-content/uploads/2018/10/deer-mammal-e1540301972881.jpg" alt="First slide" width="500" height="600">
             <div class="carousel-caption d-none d-md-block">
                 <h5><a class="btn btn-info" asp-controller="Information" asp-action="Mammal">Information on mammals</a></h5>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="https://cdn.images.express.co.uk/img/dynamic/151/590x/secondary/dinosaurs-2766143.jpg?r=1605736395442" alt="Second slide">
+            <img class="d-block w-100" src="https://cdn.images.express.co.uk/img/dynamic/151/590x/secondary/dinosaurs-2766143.jpg?r=1605736395442" alt="Second slide" width="500" height="600">
             <div class="carousel-caption d-none d-md-block">
                 <h5><a class="btn btn-info" asp-controller="Information" asp-action="Predator">Information on predators</a></h5>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="https://www.rwah.vet/wp-content/uploads/2020/03/reptile-veterinarian-fort-worth.jpg" alt="Third slide">
+            <img class="d-block w-100" src="https://www.rwah.vet/wp-content/uploads/2020/03/reptile-veterinarian-fort-worth.jpg" alt="Third slide" width="500" height="600">
             <div class="carousel-caption d-none d-md-block">
                 <h5><a class="btn btn-info" asp-controller="Information" asp-action="Reptile">Information on reptiles</a></h5>
             </div>
