--- a/ZooUni/ZooUni/Views/Information/Predator.cshtml
+++ b/ZooUni/ZooUni/Views/Information/Predator.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<AnimalViewModel>
 <h1>
-    Predator's information
+    <center>Predator's information</center>
 </h1>
 <ul>
-    <img src="https://cdn.pixabay.com/photo/2020/04/25/18/31/lion-5092047_960_720.png" style="overflow: hidden; position: relative; width:700px; height:500px;" />
+    <center><img src="https://cdn.pixabay.com/photo/2020/04/25/18/31/lion-5092047_960_720.png" style="overflow: hidden; position: relative; width:700px; height:500px;" /></center>
 </ul>
 <ul>
     Predation is a biological interaction where one organism, the predator,
@@ -14,7 +14,7 @@
     it overlaps with herbivory, as seed predators and destructive frugivores are predators.
 </ul>
 <ul>
-    <img src="https://cdn.pixabay.com/photo/2016/03/26/07/54/wild-1280149_960_720.png" style="overflow: hidden; position: relative; width:500px; height:500px;" />
+    <center><img src="https://cdn.pixabay.com/photo/2016/03/26/07/54/wild-1280149_960_720.png" style="overflow: hidden; position: relative; width:500px; height:500px;" /></center>
 </ul>
 <ul>
     Predators may actively search for or pursue prey or wait for it,
