--- a/ZooUni/ZooUni/Views/Shared/_LoginPartial.cshtml
+++ b/ZooUni/ZooUni/Views/Shared/_LoginPartial.cshtml
@@ -15,10 +15,10 @@
             </form>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Add">Add Animal</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="All">All Animals</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="All">FirstButton</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Add">Add Animal</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Info">Information</a>
