Adding Hospital controller, views, razor

--- a/ZooUni/ZooUni/Views/Shared/_LoginPartial.cshtml
+++ b/ZooUni/ZooUni/Views/Shared/_LoginPartial.cshtml
@@ -23,6 +23,9 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Info">Information</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Hospital" asp-action="AddInHospital">Hospital</a>
+        </li>
     }
     else
     {
