--- a/ZooUni/ZooUni/Views/Hospital/AddInHospital.cshtml
+++ b/ZooUni/ZooUni/Views/Hospital/AddInHospital.cshtml
@@ -20,6 +20,7 @@
                                     <span asp-validation-for="One.Name" class="small text-danger"></span>
                                 </div>
                                 <button type="submit" class="btn btn-secondary">Add in hospital</button>
+                                @*<a asp-controller="Hospital" asp-action="RemoveFromHospital" class="btn btn-secondary">Animals</a>*@
                             </div>
                         </div>
                     </form>
