--- a/ZooUni/ZooUni/Views/Shared/_LoginPartial.cshtml
+++ b/ZooUni/ZooUni/Views/Shared/_LoginPartial.cshtml
@@ -26,6 +26,9 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Hospital" asp-action="AddInHospital">Hospital</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Owner" asp-action="All">Owners</a>
+        </li>
     }
     else
     {
