--- a/ZooUni/ZooUni/Views/Animals/All.cshtml
+++ b/ZooUni/ZooUni/Views/Animals/All.cshtml
@@ -4,6 +4,8 @@
     <center>There are all animals in the Zoo!</center>
 </h1>
 
+@*<a asp-controller="Animals" asp-action="Delete" asp-route-id="@animal.Id" class="btn btn-danger">Delete</a>*@
+
 <ul>
     @foreach (var animal in Model)
     {
@@ -17,6 +19,7 @@
             <ul>
                 <img src="@animal.URL" style="overflow: hidden; position: relative; width:400px; height:400px;" />
             </ul>
+            <a asp-controller="Animals" asp-action="Edit" asp-route-id="@animal.Id" class="btn btn-warning">Edit</a>
         </h3>
     }
 </ul>
