--- a/ZooUni/ZooUni/Views/_ViewImports.cshtml
+++ b/ZooUni/ZooUni/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using ZooUni
 @using ZooUni.Models
+@using ZooUni.Data.Models
+@using ZooUni.Services.Animals
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
