--- a/ZooUni/ZooUni/Views/Animals/_AnimalFormPartial.cshtml
+++ b/ZooUni/ZooUni/Views/Animals/_AnimalFormPartial.cshtml
@@ -2,7 +2,7 @@
 
 <div class="offset-3 col-6">
     <form method="post">
-        <h2>Add animal</h2>
+        <h2 class="heading-margin text-center">@ViewBag.Title</h2>
         <div class="form-group">
             <label asp-for="Type"></label>
             <input asp-for="Type" class="form-control" placeholder="Tiger, Lion, etc...">
