--- a/ZooUni/ZooUni/Views/Owner/All.cshtml
+++ b/ZooUni/ZooUni/Views/Owner/All.cshtml
@@ -6,7 +6,7 @@
 <ul>
     <center> <h2>Denislav</h2> </center>
     <center><img src="https://scontent.fsof7-1.fna.fbcdn.net/v/t1.6435-9/170683726_3698435413613297_5138694330872365208_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=ggfOlzfRhgsAX9HLEUp&_nc_ht=scontent.fsof7-1.fna&oh=31728039af5ceff9ab7b05a7404eb13c&oe=612469F4" style="overflow: hidden; position: relative; width:400px; height:400px;" /></center>
-    <center><ul>This is the owner on this web. He is the boss on all personalle in ZooUni!</ul></center>
+    <center><ul>ZooUni owner!</ul></center>
 </ul>
 <ul>
     @foreach (var owner in Model)
