--- a/ZooUni/ZooUni/Views/Information/Info.cshtml
+++ b/ZooUni/ZooUni/Views/Information/Info.cshtml
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="https://nature-mentor.com/wp-content/uploads/2018/10/deer-mammal-e1540301972881.jpg" alt="First slide" width="500" height="600">
+            <img class="d-block w-100" src="https://img-cdn.dnes.bg/d/images/photos/0480/0000480340-article2.jpg" alt="First slide" width="500" height="600">
             <div class="carousel-caption d-none d-md-block">
                 <h5><a class="btn btn-info" asp-controller="Information" asp-action="Mammal">Information on mammals</a></h5>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="https://cdn.images.express.co.uk/img/dynamic/151/590x/secondary/dinosaurs-2766143.jpg?r=1605736395442" alt="Second slide" width="500" height="600">
+            <img class="d-block w-100" src="https://img-cdn.dnes.bg/d/images/photos/0459/0000459268-article2.jpg" alt="Second slide" width="500" height="600">
             <div class="carousel-caption d-none d-md-block">
                 <h5><a class="btn btn-info" asp-controller="Information" asp-action="Predator">Information on predators</a></h5>
             </div>
