--- a/ZooUni/ZooUni/Views/Animals/_AnimalFormPartial.cshtml
+++ b/ZooUni/ZooUni/Views/Animals/_AnimalFormPartial.cshtml
@@ -18,6 +18,7 @@
         <div class="form-group">
             <label asp-for="URL"></label>
             <input asp-for="URL" class="form-control" placeholder="Your image URL here...">
+            <span asp-validation-for="URL" class="small text-danger"></span>
         </div>
 
         <div class="form-group">
